# LeNet-5-CNN

./: .gitignore  CMakeLists.txt  README.md  README.release.md  m1_gpu.slurm  m3_op1  m3_op2  m3_req0  run.sh
Project/: Milestone1_CPU.err  Milestone1_CPU.out  Milestone1_GPU.err  Milestone1_GPU.out  m1_cpu.out  m1_cpu.slurm  m2_unroll.slurm  m3.slurm  m3_op0  m3_op4  m3_op6  m3_req1  run.sh  time.out
Project/project/: CMakeLists.txt
Project/project/m3/op_6/: m3-forward.cu
Project/project/m3/req_0/: m3-forward.cu
Project/project/src/layer/custom/: cpu-new-forward.cc  new-forward.cu
app/: README.md  __init__.py  lenet_infer.py  run_demo.py  server.py
app/cpp/: CMakeLists.txt  idx_dataset.cc  idx_dataset.h  lenet_cpu_main.cc
app/frontend/: app.js  index.html  style.css
cnn/optimizations/fastest/: m3-forward.cu
cnn/optimizations/op_1/: m3-forward.cu
cnn/optimizations/op_4/: m3-forward.cu
cnn/src/: network.cc  utils.h
cnn/src/layer/custom/: unroll-new-forward.cu
demo/: README.md  lenet_infer.py  run_demo.py  server.py
demo/static/: app.js  index.html  style.css
lab0/: lab0  lab0.out
lab1/: lab1  lab1.cu  lab1.out
lab2/: job_sanitizer.slurm  lab2  lab2.cu  lab2.out
lab3/: job_sanitizer.slurm  lab3  lab3.cu  lab3.out
lab4/: lab4  lab4.cu  lab4.out
lab5/: job_sanitizer.slurm  lab5  lab5.cu  lab5.out
lab6/: job_sanitizer.slurm  lab6  lab6.cu  lab6.err  lab6.out
lab7/: lab7  lab7.cu  lab7.err  lab7.out
lab8/: lab8  lab8.cu  lab8.out
project/: CMakeLists.txt
project/m3/op_0/: m3-forward.cu
project/m3/req_1/: m3-forward.cu
project/optimizations/op_2/: m3-forward.cu
project/src/layer/custom/: kernel-fusion-forward.cu
